--- a/css/money-pc.less
+++ b/css/money-pc.less
@@ -137,7 +137,7 @@ a.fiq-a { .ib; .pointer; }
                 li { .mb(28);
                   &:last-child { .mb(0); }
                   p { .fs(14); .lh(30);
-                    span { color:#fff; .bold; .wh(24,24); .bgc(#E27B00); .br(50%); .mr(5); .tc; .lh(24); }
+                    span { color:#fff; .bold; .wh(24,24); .bgc(#E27B00); .br(50%); .mr(5); .tc; .lh(24); .ib; }
                     em { .bold; }
                   }
                 }
