--- a/css/money-t.less
+++ b/css/money-t.less
@@ -68,6 +68,7 @@
                   &:hover { .-a(#222); .bold; z-index: 1; }
                 }
               }
+              .fiq-top-img { .wh(522,544); .contain('../img/money/1.png'); .block; .mh-c; .mt(30); }
             }
           }
           &.fiq-sec1 {
