--- a/css/money-mo.less
+++ b/css/money-mo.less
@@ -66,6 +66,7 @@ a.fiq-a { .ib; .pointer; }
                 &:hover { .-a(#222); .bold; z-index: 1; }
               }
             }
+            .fiq-top-img { .wh(522,544); .contain('../img/money/1.png'); .block; .mh-c; .mt(30); }
           }
         }
         &.fiq-sec1 {
