--- a/css/money-t.css
+++ b/css/money-t.css
@@ -160,6 +160,17 @@
     font-weight: 700;
     z-index: 1;
   }
+  .fiq-container .inner .fiq-money .fiq-section.fiq-top .fiq-inner .fiq-top-img {
+    width: 25.71428571rem;
+    height: 26.79802956rem;
+    background-repeat: no-repeat;
+    background-image: url('../img/money/1.png');
+    background-size: contain;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1.47783251rem;
+  }
   .fiq-container .inner .fiq-money .fiq-section.fiq-sec1 .fiq-inner .fiq-tab-wrap .fiq-tab {
     flex: 1 1 33.33%;
   }
