--- a/css/style-t.less
+++ b/css/style-t.less
@@ -8,7 +8,7 @@
   html { font-size: 18px; }
 
   a.fiq-a { .ib; .pointer; }
-  h2.fiq-h2 { .fs(28); .lh(32); color:@c2; .ls(-0.7); }
+  h2.fiq-h2 { .fs(28); .lh(32); .ls(-0.7); }
   span.fiq-s-line { .wh(100%,2px); .bgc(@c2); .m(20,0); .ib; }
   span.fiq-d-line { .wh(100%,2px); .bgc(@c2); .m(30,0); .ib; .rel;
     &:after { .cnt; .wh(100%,1px); .bgc(@c2); .abs; .lb(0,-3); }
@@ -112,7 +112,7 @@
                 }
                 .fiq-r { .fr; .mt(11);
                   .fiq-price, .fiq-indices-span { .ib; .vam; }
-                  .fiq-price { .fs(24); .bold; .lh(32); color:@c2; .mr(12); }
+                  .fiq-price { .fs(24); .bold; .lh(32); .mr(12); }
                   .fiq-indices-span {
                     p + p { .fs(18); color:#fff; .wh(85,36); .tc; .lh(36); .br(4); .ml(10); }
                   }
@@ -213,7 +213,7 @@
                 tr {
                   td {
                     &:nth-child(odd) { .tl; }
-                    &:nth-child(even) { .fs(20); color:@c2; .tr; .bold; }
+                    &:nth-child(even) { .fs(20); .tr; .bold; }
                   }
                 }
               }
@@ -642,7 +642,7 @@
               }
               ul { .m(40,0);
                 li { .clear; .mb(30);
-                  p { .fs(20); .lh(27); .tl; .w(420); overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical; word-wrap:break-word; line-height: 1.2em; height: 1.2em; .ib; }
+                  h3 { .fs(20); .lh(27); .tl; .w(420); overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical; word-wrap:break-word; line-height: 1.2em; height: 1.2em; .ib; }
                   span { .fs(18); color:#888; .fr; }
                 }
               }
