--- a/css/money-mo.less
+++ b/css/money-mo.less
@@ -12,14 +12,14 @@ a.fiq-a { .ib; .pointer; }
 
 .fiq-container {
   .inner {
-    .fiq-money { .fs(0); .tc; color:#222;
+    .fiq-money { .fs(0); .tc; 
       .fiq-section { .p(40,16,50); .-box; .tl;
         &:nth-child(odd) { .bgc(#F7F7F7); }
         .fiq-inner {
           h2 { .fs(28); .lh(37); .tl; .bold; .mb(30); }
           .fiq-tit { .fs(24); .lh(32); .mb(30); .bold; }
           .fiq-txt { .fs(20); color:#888; .lh(38); .mb(30);
-            em { color:#222; .block; .bold; }
+            em { .block; .bold; }
             &:last-of-type { .mb(0); }
           }
           .fiq-tab-wrap { .mb(30); .wf; .tc; .flex; flex-wrap: wrap;
@@ -121,5 +121,24 @@ a.fiq-a { .ib; .pointer; }
         }
       }
     }
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body, button, input, select, option, textarea, table, th, td, a { color:#888; }
+  body, a { color:#888!important; }
+  .fiq-container .inner .fiq-money .fiq-section .fiq-inner {
+    [data-view="1"] [data-tab="1"],
+    [data-view="2"] [data-tab="2"],
+    [data-view="3"] [data-tab="3"],
+    [data-view="4"] [data-tab="4"],
+    [data-view="5"] [data-tab="5"],
+    [data-view="6"] [data-tab="6"],
+    [data-view="7"] [data-tab="7"],
+    [data-view="8"] [data-tab="8"],
+    [data-view="9"] [data-tab="9"],
+    [data-view="10"] [data-tab="10"],
+    [data-view="11"] [data-tab="11"],
+    [data-view="12"] [data-tab="12"] { .-a(#888); z-index: 1; .bold; }
   }
 }
